# llm_quest_benchmark

./: .coderabbit.yaml  .cursorignore  .dockerignore  .env.template  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .pre-commit.yaml  .style.yapf  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  QUEST_RUNS_ANALYSIS.md  README.md  SPEC.md  SPEC_TRACE_VIEWER.md  TODO.md  benchmark_config.yaml  check_benchmark.py  constants.py  docker-compose.yml  download_quests.sh  ensure_env.sh  install.ps1  install.sh  output.json  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  qm_runner.py  requirements-dev.txt  requirements.txt  run_quest.py  setup.py  test_metrics.db  tsconfig.json  webpack.engine.js
.claude/: CLAUDE.md  README.md  initialize.md  load_repo.sh
.claude/guides/: cli_commands.md  code_patterns.md  leaderboard_implementation.md  leaderboard_tasks.md  repo_structure.md
.claude/repo_summary/: python_files.txt
.cursor/rules/: llm_quest_benchmark.mdc  main.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy-site.yml
agents/: calculator-agent.json  claude-3-haiku-default.json  gpt-4o-default.json  memory-agent.json
configs/: default.yaml  first.yaml  first_test.yaml  kr1.yaml  kr1_micro.yaml  kr1_test.yaml  kr2_en_benchmark.yaml  kr2_en_test.yaml  quest_metadata.json  temperature_test.yaml  test_benchmark.yaml
configs/benchmarks/: balanced_gpt5mini_all_modes.yaml  balanced_gpt5mini_final.yaml  balanced_gpt5mini_remaining.yaml  claude_exec_pilot.yaml  deepseek_sr_2_1_2121_eng_180.yaml  diehard_claude_v1.yaml  diehard_claude_v2.yaml  easy_quests.yaml  examen_claude_v1.yaml  examen_claude_v2.yaml  examen_claude_v3.yaml  examen_deepseek_v1.yaml  examen_gemini_v1.yaml  exp3_no_loop_breaker.yaml  exp3_stateful_compact.yaml  exp4_compaction_no_memo.yaml  exp4_memo_cot.yaml  exp4_memo_extended.yaml  exp4_memo_structured.yaml  exp5_stateful_compact_variance.yaml  exp6_prompt_hints.yaml  exp6_tools.yaml  exp6_tools_hints.yaml  exp6_unified_tools_screen.yaml  exp7_deepseek.yaml  exp7_haiku.yaml  exp7_llama.yaml  exp7_mistral.yaml  exp7_qwen.yaml  exp7b_deepseek_v4.yaml  exp7b_haiku45.yaml  exp7b_model_upgrades.yaml  exp7b_qwen36_flash.yaml  full_anti_loop_deepseek_v1.yaml  full_reasoning_deepseek_baseline_v1.yaml  gemini_flash_pilot.yaml  gemini_kr_1_ru_all.yaml  gemini_sr2_en_ab_v1.yaml  gemini_sr_2_1_2121_eng_all.yaml  gpt4o_sr_2_1_2121_eng_180.yaml  (+28 more)
configs/test/: parallel_agents_test.yaml  temperature_test.yaml  test_benchmark.yaml  test_quests.yaml  test_quests_pattern.yaml
docs/: API.md  ARCHITECTURE.md  DATASHEET.md  DEPLOYMENT.md  EXPERIMENTS_LOG.md  EXPERIMENT_AUDIT.md  EXPERIMENT_LOG_2026_02_16.md  HARNESS_ENGINEERING.md  IOS_TESTFLIGHT.md  LANDSCAPE.md  MERGE_MASTER_RESOLUTION_2026_02_16.md  PLANS.md  RUNBOOK.md  SPEC.md  design.md  goose_review_1.md  goose_review_2.md  metrics_report.md  prd.md  qm_simplified_workflow.md  qm_workflow.md  report.md  roadmap.md
docs/experiments/: 2026-02-16-deepseek-fullset-ab.md  2026-02-16-gemini-sr2-en-subgoal-risk-ab.md  2026-02-16_sonnet_prompt_iterations.md  README.md
docs/plans/: 2026-04-20-preliminary-paper-and-tiered-benchmarks.md
ios/LLMQuest/: AppDelegate.swift  Info.plist  LocalSiteSchemeHandler.swift  QuestWebViewController.swift  SceneDelegate.swift  StageSiteInputs.xcfilelist
ios/LLMQuest.xcodeproj/: project.pbxproj
ios/export/: ExportOptions.plist.template
ios/scripts/: stage_site.sh
llm_quest_benchmark/: __main__.py  constants.py  llm_agent.py  metrics.py  qm.py  qm_adapter.py  runner.py  update_imports.py
llm_quest_benchmark/agents/: __init__.py  agent_factory.py  agent_manager.py  base.py  human_player.py  llm_agent.py  llm_client.py  planner_agent.py  random_agent.py  simple_agent.py  strategic_agent.py  test_agents.py  tool_agent.py
llm_quest_benchmark/configs/: main_llms.yaml
llm_quest_benchmark/core/: __init__.py  (+10 more)
paper/: EXPERIMENT_PLAN.md  README.md  main.tex  references.bib  related_work_notes.md
research/: blogpost_draft.md
scripts/: README.md  backfill_costs.py  build_cohort_data.py  build_paper_data.py  build_priority_matrix.py  classify_failures.py  compute_empirical_difficulty.py  consoleplayer.ts  debug_database.py  debug_template.py  doc_gardening.sh  extract_quest_metadata.js  generate_parallel_configs.py  import_human_trace.py  inspect_app.py  qm_player_test.py  qm_runner.py  replay_runs.py  run_provider_matrix.sh  select_runs_for_analysis.py  test_benchmark_load.py  test_llm_quest.py  test_template_rendering.py  update_leaderboard.sh  update_leaderboard_gpt5mini.py
site/: about.html  blog.html  index.html  leaderboard.json  paper.html  play.html  traces.html
src/: data_structures.py  llm_agent.py  qm.py  qm_adapter.py  qm_parser.py  simulator.py
tests/: test_llm_agent.py  test_qm_parser.py
(+226 files in other folders)
