[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "llm_quest_benchmark"
version = "0.1.0"
description = "LLM Quest Benchmarking System"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.0.0",
    "SQLAlchemy>=2.0.0",
    "python-dotenv>=0.19.0",
    "rich>=13.0.0",
    "streamlit-ace>=0.1.1",
    "pyyaml>=6.0",
    "Jinja2>=3.1.2",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "types-python-dateutil",
    "types-PyYAML",
]

[project.scripts]
llm-quest = "llm_quest_benchmark.executors.cli.commands:app"


[tool.setuptools]
packages = ["llm_quest_benchmark"]

[tool.setuptools.package-data]
"llm_quest_benchmark" = [
    "prompt_templates/*.jinja",
    "scripts/*.ts"
]
